# openCVlearning

./: README.md
OpenCVRead/: CMakeLists.txt  main.cpp  yourFileProgram
